After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 776360 - msdk: seeking doesn't work
msdk: seeking doesn't work
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Windows
: Normal normal
: 1.11.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-12-21 22:47 UTC by Scott D Phillips
Modified: 2017-01-20 19:17 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[PATCH gst-plugins-bad] msdk: Propagate GstFlowReturn values (9.42 KB, patch)
2016-12-21 22:48 UTC, Scott D Phillips
committed Details | Review

Description Scott D Phillips 2016-12-21 22:47:51 UTC
GstFlowReturns get squashed into GST_FLOW_ERROR in a few places which fails any seeks.
Comment 1 Scott D Phillips 2016-12-21 22:48:44 UTC
Created attachment 342357 [details] [review]
[PATCH gst-plugins-bad] msdk: Propagate GstFlowReturn values
Comment 2 sreerenj 2017-01-19 23:53:56 UTC
Review of attachment 342357 [details] [review]:

lgtm
Comment 3 sreerenj 2017-01-20 19:15:39 UTC
Review of attachment 342357 [details] [review]:

Pushed, thanks for the patch.

commit 732a157cb77a3a8763f95cf045634b64186ba17b
Author: Scott D Phillips <scott.d.phillips@intel.com>
Date:   Fri Jan 20 11:11:50 2017 -0800

    msdk: Propagate GstFlowReturn values
    
    In some places a GST_FLOW_FLUSHING result was return as a FALSE
    gboolean and then returned from a parent function as
    GST_FLOW_ERROR. This prevented seeking from working.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=776360